# hydra

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/data/: README.md
backend/data/fixtures/: extraction_invalid_unknown_id.json  extraction_valid_minimal.json
backend/data/metadata/: corpus_candidates.template.csv  local_corpus.manifest.template.json  metadata_template.json
backend/ontology/: README.md  hydra_ontology.yaml
backend/src/hydra_api/: __init__.py  briefing_config.py  briefing_service.py  catalog_service.py  chunking.py  config.py  council_prompts.py  council_service.py  db.py  db_schema.py  errors.py  evals_config.py  evals_judges.py  evals_metrics.py  evals_service.py  extraction.py  extraction_prompts.py  graph_projection.py  ingest.py  logging.py  main.py  model_client.py  observability.py  ontology.py  rag_answering.py  rag_config.py  rag_embeddings.py  rag_indexing.py  rag_retriever.py  rag_service.py  rag_store.py  schemas.py
backend/tests/: test_catalog_endpoints.py
docs/: README.md  briefing.md  evals-observability-llm-council.md  hydra-analysis.md  hydra-architecture.md  hydra-brainstorming.md  hydra-onboarding-architecture-flows-mission07.excalidraw  ingest.md  ontology-extraction-and-graph.md  tutoria.md
frontend/: package.json  pnpm-lock.yaml  tailwind.config.ts
sdd/: 00-product-scope.md  01-architecture-decisions.md  02-data-model.md  03-api-contract.md  04-rag-pipeline.md  05-evals-observability.md  06-frontend-spec.md  07-implementation-plan.md  08-task-checklist.md  (+6 more)
(+73 files in other folders)
