[project]
name = "hydra-api"
version = "0.1.0"
description = "HYDRA API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "psycopg[binary]",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "openai>=2.37.0",
]

[project.optional-dependencies]
test = ["httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hydra_api"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
